--- a/public/scss/3-Modules/_thumbnail-product.scss
+++ b/public/scss/3-Modules/_thumbnail-product.scss
@@ -1,5 +1,6 @@
 .list_thumbnail-product {
-    @include responsive-flex-row-container($dir: row, $wrap: wrap, $items-per-line: 4, $gap-space: 3%);
+    margin-top: 1em;
+    @include responsive-flex-row-container($dir: row, $wrap: wrap, $items-per-line: 4, $gap-space: 0%);
 }
 
 .thumbnail-product {
@@ -7,8 +8,33 @@
     padding: 20px;
     box-shadow: 5px 5px 10 12 black;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-.thumbnail-product__image img {
-    @include fill-entire-container();
+.thumbnail-product__image {
+    flex-basis: 2;
+    img {
+        @include fill-entire-container();
+    }
+}
+
+.thumbnail-product__info {
+    flex-basis: 1;
+    margin-top: 1em;
+    padding: 1em;
+    text-transform: uppercase;
+}
+
+.thumbnail-product__title {
+    margin-bottom: 1em;
+    font-size: 0.8em;
+}
+
+.thumbnail-product__price {
+    border-radius: 10px;
+    background-color: rgba($color: #000000, $alpha: 0.9);
+    color: #daaa1e;
+    padding: 0.5em;
 }
