--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -26,6 +26,117 @@ button {
   font-family: inherit;
 }
 
+/* ----------------------------------------------------------------------------------------------------
+Super Form Reset
+A couple of things to watch out for:
+- IE8: If a text input doesn't have padding on all sides or none the text won't be centered.
+- The default border sizes on text inputs in all UAs seem to be slightly different. You're better off using custom borders.
+- You NEED to set the font-size and family on all form elements
+- Search inputs need to have their appearance reset and the box-sizing set to content-box to match other UAs
+- You can style the upload button in webkit using ::-webkit-file-upload-button
+- ::-webkit-file-upload-button selectors can't be used in the same selector as normal ones. FF and IE freak out.
+- IE: You don't need to fake inline-block with labels and form controls in IE. They function as inline-block.
+- By turning off ::-webkit-search-decoration, it removes the extra whitespace on the left on search inputs
+----------------------------------------------------------------------------------------------------*/
+input,
+label,
+select,
+button,
+textarea {
+  margin: 0;
+  border: 0;
+  padding: 0;
+  display: inline-block;
+  vertical-align: middle;
+  white-space: normal;
+  line-height: 1;
+  /* Browsers have different default form fonts */
+  font-size: 13px;
+  font-family: Arial;
+}
+
+/* Remove the stupid outer glow in Webkit */
+input:focus,
+textarea:focus,
+select:focus {
+  outline: none;
+}
+
+/* Box Sizing Reset
+-----------------------------------------------*/
+/* All of our custom controls should be what we expect them to be */
+/* These elements are usually rendered a certain way by the browser */
+button,
+input[type=reset],
+input[type=button],
+input[type=submit],
+input[type=checkbox],
+input[type=radio],
+select {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+/* Text Inputs
+-----------------------------------------------*/
+/* Button Controls
+-----------------------------------------------*/
+input[type=checkbox],
+input[type=radio] {
+  width: 13px;
+  height: 13px;
+}
+
+/* File Uploads
+-----------------------------------------------*/
+/* Search Input
+-----------------------------------------------*/
+/* Make webkit render the search input like a normal text field */
+input[type=search] {
+  -webkit-appearance: textfield;
+  -webkit-box-sizing: content-box;
+}
+
+/* Turn off the recent search for webkit. It adds about 15px padding on the left */
+::-webkit-search-decoration {
+  display: none;
+}
+
+/* Buttons
+-----------------------------------------------*/
+button,
+input[type=reset],
+input[type=button],
+input[type=submit] {
+  /* Fix IE7 display bug */
+  overflow: visible;
+  width: auto;
+}
+
+/* IE8 and FF freak out if this rule is within another selector */
+::-webkit-file-upload-button {
+  padding: 0;
+  border: 0;
+  background: none;
+}
+
+/* Textarea
+-----------------------------------------------*/
+textarea {
+  /* Move the label to the top */
+  vertical-align: top;
+  /* Turn off scroll bars in IE unless needed */
+  overflow: auto;
+}
+
+/* Selects
+-----------------------------------------------*/
+select[multiple] {
+  /* Move the label to the top */
+  vertical-align: top;
+}
+
 html {
   scroll-behavior: smooth;
   font-size: 1rem;
@@ -60,20 +171,6 @@ main {
 
 button {
   cursor: pointer;
-}
-
-form {
-  text-align: center;
-}
-form input:not([type=checkbox]) {
-  width: 100%;
-}
-form:focus {
-  border: 1px solid black;
-}
-form textarea {
-  resize: none;
-  overflow: auto;
 }
 
 .modal-cover {
@@ -448,25 +545,32 @@ form textarea {
 .form__content input {
   line-height: 1em;
 }
-.form__content input,
-.form__content textarea {
+.form__content textarea,
+.form__content input {
+  border: 1px solid transparent;
   margin: 5px 0;
   width: 100%;
   border-radius: 8px;
-  border: 1px solid #ddd;
-  padding: 0.5rem;
   box-shadow: inset 0 0 0.25rem #ddd;
+  padding: 1em;
 }
-.form__content input:focus,
-.form__content textarea:focus {
-  outline: none;
-  border: 1px solid #d0d0d0;
-  box-shadow: inset 0 0 0.5rem #d0d0d0;
+.form__content textarea:focus,
+.form__content input:focus {
+  box-shadow: inset 0 0 0.7rem #d0d0d0;
+  border: 1px solid black;
 }
-.form__content input::placeholder,
-.form__content textarea::placeholder {
+.form__content textarea::placeholder,
+.form__content input::placeholder {
   font-style: italic;
   font-size: 0.875rem;
+}
+.form__content input::not([type="submit"]) {
+  background-color: #ddd;
+}
+
+.form__btn {
+  background-color: black;
+  color: #f0c300;
 }
 
 .category {
@@ -565,8 +669,7 @@ form textarea {
 
 .thumbnail-product {
   flex-basis: 25%;
-  padding: 20px;
-  box-shadow: 5px 5px 10 12 black;
+  padding: 1em;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -579,21 +682,23 @@ form textarea {
 .thumbnail-product__image img {
   width: 100%;
   height: 100%;
+  transform: scale(0.8, 0.8);
 }
 
 .thumbnail-product__info {
   flex-basis: 1;
   margin-top: 1em;
-  padding: 1em;
   text-transform: uppercase;
 }
 
 .thumbnail-product__title {
   margin-bottom: 1em;
-  font-size: 0.8em;
+  font-size: 1em;
 }
 
 .thumbnail-product__price {
+  font-weight: bold;
+  font-size: 1.5em;
   border-radius: 10px;
   background-color: rgba(0, 0, 0, 0.9);
   color: #daaa1e;
@@ -809,6 +914,50 @@ hr::after {
 }
 .checkbox-wrapper input[type=checkbox]:checked {
   background-color: #4c6ef5;
+}
+
+.overlay--relative {
+  position: relative;
+}
+
+.overlay--relative:hover .overlay {
+  visibility: visible;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+.overlay--relative:hover img {
+  -webkit-filter: blur(2px);
+  filter: blur(2px);
+}
+
+.overlay {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  visibility: hidden;
+  background-color: rgba(0, 0, 0, 0);
+  transition: background-color 0.3s ease;
+}
+
+.overlay__link {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+.overlay__link a {
+  cursor: pointer;
+  color: black;
+  display: inline-block;
+  opacity: 1;
+  width: 7em;
+  background-color: #eab92d;
+  border-radius: 10px;
+  line-height: 2em;
+  box-shadow: 0 0 5px 0px rgba(0, 0, 0, 0.8);
 }
 
 .categories {
