--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -35,6 +35,7 @@
 @import "./3-Modules/horizontal-line-break";
 @import "./3-Modules/details-summary";
 @import "./3-Modules/checkbox";
+@import "./3-Modules/cover--gray-scale";
 
 // 4-PAGES
 @import "./4-Pages/index";
