--- a/public/scss/3-Modules/_form.scss
+++ b/public/scss/3-Modules/_form.scss
@@ -19,7 +19,7 @@
             margin: 5px 0;
             width: 100%;
             border-radius: 8px;
-            box-shadow: inset 0 0 0.25rem #ddd;
+            box-shadow: inset 0 0 0.25rem rgb(207, 195, 195);
             padding: 1em;
 
             &:focus {
