--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -19,7 +19,7 @@
 @import "./2-Layouts/modal";
 @import "./2-Layouts/header";
 @import "./2-Layouts/navigation";
-@import "./2-Layouts/container--center";
+@import "./2-Layouts/container";
 @import "./2-Layouts/footer";
 
 // 3-MODULES
