--- a/public/scss/1-Bases/_reset.scss
+++ b/public/scss/1-Bases/_reset.scss
@@ -8,14 +8,10 @@
     text-decoration: none;
 }
 
-div {
-    border: 0;
-    outline: 0;
-}
-
 a:visited,
-a:link {
-    color: initial;
+a:link,
+a:focus {
+    text-decoration: none;
 }
 
 ul {
