--- a/public/scss/3-Modules/_logo.scss
+++ b/public/scss/3-Modules/_logo.scss
@@ -1,9 +1,10 @@
 .logo {
     display: inline-block;
+    vertical-align: middle;
 
-    > a {
-        font-size: 30px;
-        color: #f0c300;
-        text-shadow: 2px 4px 3px rgba(124, 155, 11, 0.747);
+    img {
+        display: block;
+        max-width: 100%;
+        object-position: center center;
     }
 }
