--- a/public/scss/3-Modules/_thumbnail-product.scss
+++ b/public/scss/3-Modules/_thumbnail-product.scss
@@ -38,4 +38,8 @@
     background-color: rgba($color: #000000, $alpha: 0.9);
     color: #f0c303;
     padding: 0.5em;
+
+    background-image: url(/public/asset/icons/dollar.png);
+    background-repeat: no-repeat;
+    background-position: calc(50% + 40px) center;
 }
