--- a/public/scss/4-Pages/Pages/_product.scss
+++ b/public/scss/4-Pages/Pages/_product.scss
@@ -5,6 +5,7 @@
 
     &__image {
         float: left;
+        max-width: 50%;
         width: 50%;
         border-radius: 10px;
         overflow: hidden;
