--- a/public/scss/3-Modules/_category.scss
+++ b/public/scss/3-Modules/_category.scss
@@ -59,11 +59,15 @@
             color: black;
             display: block;
             height: 2em;
-            width: 7em;
+            width: 150px;
             background-color: #eab92d;
             border-radius: 10px;
             line-height: 2em;
             box-shadow: 0 0 5px 0px rgba(0, 0, 0, 0.8);
+            text-transform: uppercase;
+            font-size: 1em;
+            padding: 0 10px;
+            font-weight: bold;
         }
     }
 }
