--- a/public/scss/3-Modules/_form.scss
+++ b/public/scss/3-Modules/_form.scss
@@ -36,6 +36,10 @@
         input::not([type="submit"]) {
             background-color: #ddd;
         }
+
+        textarea {
+            resize: none;
+        }
     }
 }
 
