--- a/public/scss/4-Pages/Pages/_home.scss
+++ b/public/scss/4-Pages/Pages/_home.scss
@@ -2,7 +2,7 @@
     padding-top: 2rem;
 
     @include responsive-flex-row-container($dir: row, $wrap: wrap, $items-per-line: 2, $gap-space: 3%);
-    .category:nth-child(1) {
+    .category:nth-of-type(1) {
         flex-basis: 100%;
         max-height: 50em;
     }
