[ADDING] search functions, populate data to collection

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -355,7 +355,7 @@ button {
 
 .btn {
   text-align: start;
-  border: none;
+  border: 0;
   color: white;
   padding: 1em 2em;
   text-decoration: none;
@@ -1136,4 +1136,4 @@ hr {
   margin: 20px auto;
 }
 
-/*# sourceMappingURL=styles.css.map */
+/*# sourceMappingURL=style.css.map */
