--- a/public/scss/3-Modules/_buttons.scss
+++ b/public/scss/3-Modules/_buttons.scss
@@ -1,6 +1,6 @@
 .btn {
     text-align: start;
-    border: none;
+    border: 0;
     color: white;
     padding: 1em 2em;
     text-decoration: none;
