--- a/public/scss/3-Modules/_buttons.scss
+++ b/public/scss/3-Modules/_buttons.scss
@@ -2,7 +2,9 @@
     text-align: start;
     border: 0;
     color: white;
-    padding: 1em 2em;
+    padding: 0 2em;
+    line-height: 40px;
+    height: 40px;
     text-decoration: none;
     margin: 4px 2px;
     cursor: pointer;
@@ -49,6 +51,8 @@
 //  SUBMIT APPLIED FOR MODAL FORM
 //  =================================
 .btn-control {
+    display: block;
+    border-radius: 8px;
     background-color: $color-bg;
     text-transform: uppercase;
     text-align: center;
