--- a/public/scss/3-Modules/_form.scss
+++ b/public/scss/3-Modules/_form.scss
@@ -10,7 +10,7 @@
     &__content {
         .btn,
         input {
-            line-height: 1em;
+            line-height: 40px;
         }
 
         textarea,
@@ -20,7 +20,6 @@
             width: 100%;
             border-radius: 8px;
             box-shadow: inset 0 0 0.25rem rgb(207, 195, 195);
-            padding: 1em;
 
             &:focus {
                 box-shadow: inset 0 0 0.7rem darken(#ddd, 5%);
