--- a/public/css/style.css
+++ b/public/css/style.css
@@ -360,7 +360,7 @@ button {
   line-height: 40px;
   height: 40px;
   text-decoration: none;
-  margin: 4px 2px;
+  margin: 4px 0;
   cursor: pointer;
   text-transform: uppercase;
   font-weight: 700;
@@ -435,6 +435,7 @@ button {
   background-color: #ebb734;
   text-transform: uppercase;
   text-align: center;
+  font-size: 16px;
 }
 
 .btn-control[value] {
@@ -531,7 +532,7 @@ button {
 }
 .form__content textarea,
 .form__content input {
-  border: 1px solid transparent;
+  border: none;
   margin: 5px 0;
   width: 100%;
   border-radius: 8px;
@@ -540,7 +541,6 @@ button {
 .form__content textarea:focus,
 .form__content input:focus {
   box-shadow: inset 0 0 0.7rem #d0d0d0;
-  border: 1px solid black;
 }
 .form__content textarea::placeholder,
 .form__content input::placeholder {
