--- a/public/scss/3-Modules/_buttons.scss
+++ b/public/scss/3-Modules/_buttons.scss
@@ -6,7 +6,7 @@
     line-height: 40px;
     height: 40px;
     text-decoration: none;
-    margin: 4px 2px;
+    margin: 4px 0;
     cursor: pointer;
 
     text-transform: uppercase;
@@ -56,6 +56,7 @@
     background-color: $color-bg;
     text-transform: uppercase;
     text-align: center;
+    font-size: 16px;
 }
 
 .btn-control[value] {
