--- a/public/scss/3-Modules/_form.scss
+++ b/public/scss/3-Modules/_form.scss
@@ -15,7 +15,7 @@
 
         textarea,
         input {
-            border: 1px solid transparent;
+            border: none;
             margin: 5px 0;
             width: 100%;
             border-radius: 8px;
@@ -23,7 +23,6 @@
 
             &:focus {
                 box-shadow: inset 0 0 0.7rem darken(#ddd, 5%);
-                border: 1px solid black;
             }
 
             &::placeholder {
