--- a/public/scss/0-Helpers/Mixin/_mixin.scss
+++ b/public/scss/0-Helpers/Mixin/_mixin.scss
@@ -102,7 +102,7 @@
 //  =========================================
 //  CLEAR FIX FOR FLOATTING ITEMS
 //  =========================================
-@mixin cleafix() {
+@mixin clearfix() {
     &::after {
         content: "";
         clear: both;
