--- a/public/scss/4-Pages/Pages/_product.scss
+++ b/public/scss/4-Pages/Pages/_product.scss
@@ -31,7 +31,7 @@
         margin-bottom: 20px;
     }
 
-    @include cleafix();
+    @include clearfix();
     @include compatible-with-device("tablet") {
         font-size: 1rem;
     }
