--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1037,9 +1037,9 @@ hr::after {
   margin: 0 auto;
   width: 100%;
   background-color: #fcf9d0;
-  margin: 20vh 0;
+  margin: 20vh 0 5vh 0;
   border-radius: 10px;
-  padding: 20px;
+  padding: 20px 30px 20px 30px;
 }
 .checkout__header {
   font-size: 40px;
@@ -1051,11 +1051,7 @@ hr::after {
   text-align: center;
   margin-bottom: 20px;
 }
-
-.cart {
-  padding: 20px;
-}
-.cart__item {
+.checkout .cart__item {
   box-sizing: content-box;
   border-radius: 10px;
   height: 150px;
@@ -1066,16 +1062,16 @@ hr::after {
   margin: 20px 0 0 0;
   box-shadow: 0 1.1px 20.3px -33px rgba(0, 0, 0, 0.009), 0 3.7px 40.2px -33px rgba(0, 0, 0, 0.016), 0 9px 61.1px -33px rgba(0, 0, 0, 0.023), 0 19px 87.7px -33px rgba(0, 0, 0, 0.03), 0 39.8px 134.6px -33px rgba(0, 0, 0, 0.041), 0 100px 232px -33px rgba(0, 0, 0, 0.07);
 }
-.cart__image {
+.checkout .cart__image {
   margin-right: 50px;
   width: 150px;
   min-width: 150px;
   height: 150px;
 }
-.cart__image img {
+.checkout .cart__image img {
   max-width: 100%;
 }
-.cart__delete-btn {
+.checkout .cart__delete-btn {
   font-size: 20px;
   line-height: 40px;
   padding: 0 15px;
@@ -1084,7 +1080,7 @@ hr::after {
   background-color: #efac9d;
   border-radius: 10px;
 }
-.cart__product-price {
+.checkout .cart__product-price {
   color: #666666;
   font-weight: lighter;
   min-width: 150px;
@@ -1098,7 +1094,7 @@ hr::after {
   background-position: 0;
   background-size: 15px;
 }
-.cart__product-info {
+.checkout .cart__product-info {
   flex-grow: 1;
   height: 100%;
   display: flex;
@@ -1136,6 +1132,44 @@ hr::after {
   line-height: 25px;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.payment {
+  margin: 50px 0 0 auto;
+  min-width: 300px;
+  width: 400px;
+  height: 300px;
+}
+.payment__option {
+  line-height: 30px;
+  width: 100%;
+  height: 30px;
+  background-image: url(/public/asset/icons/paypall.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: 60px;
+}
+.total {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.total__header::after {
+  content: ":";
+  margin-left: 10px;
+  font-size: 20px;
+}
+.total__price {
+  min-width: 150px;
+  font-size: 30px;
+  line-height: 50px;
+  text-align: start;
+  padding-left: 30px;
+  background-image: url(/public/asset/icons/dollar.png);
+  background-repeat: no-repeat;
+  background-position: 0;
+  background-size: 20px;
 }
 
 .product {
