--- a/public/scss/4-Pages/Pages/_cart.scss
+++ b/public/scss/4-Pages/Pages/_cart.scss
@@ -1,10 +1,13 @@
+.container {
+}
+
 .checkout {
     margin: 0 auto;
     width: 100%;
     background-color: #fcf9d0;
-    margin: 20vh 0;
+    margin: 20vh 0 5vh 0;
     border-radius: 10px;
-    padding: 20px;
+    padding: 20px 30px 20px 30px;
 
     &__header {
         font-size: 40px;
@@ -16,72 +19,70 @@
         text-align: center;
         margin-bottom: 20px;
     }
-}
 
-.cart {
-    padding: 20px;
+    .cart {
+        &__item {
+            box-sizing: content-box;
 
-    &__item {
-        box-sizing: content-box;
+            border-radius: 10px;
+            height: 150px;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin: 20px 0 0 0;
 
-        border-radius: 10px;
-        height: 150px;
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin: 20px 0 0 0;
-
-        box-shadow: 0 1.1px 20.3px -33px rgba(0, 0, 0, 0.009), 0 3.7px 40.2px -33px rgba(0, 0, 0, 0.016),
-            0 9px 61.1px -33px rgba(0, 0, 0, 0.023), 0 19px 87.7px -33px rgba(0, 0, 0, 0.03),
-            0 39.8px 134.6px -33px rgba(0, 0, 0, 0.041), 0 100px 232px -33px rgba(0, 0, 0, 0.07);
-    }
-
-    &__image {
-        margin-right: 50px;
-        width: 150px;
-        min-width: 150px;
-        height: 150px;
-
-        img {
-            max-width: 100%;
+            box-shadow: 0 1.1px 20.3px -33px rgba(0, 0, 0, 0.009), 0 3.7px 40.2px -33px rgba(0, 0, 0, 0.016),
+                0 9px 61.1px -33px rgba(0, 0, 0, 0.023), 0 19px 87.7px -33px rgba(0, 0, 0, 0.03),
+                0 39.8px 134.6px -33px rgba(0, 0, 0, 0.041), 0 100px 232px -33px rgba(0, 0, 0, 0.07);
         }
-    }
 
-    &__delete-btn {
-        font-size: 20px;
-        line-height: 40px;
-        padding: 0 15px;
-        text-transform: uppercase;
-        margin-left: 50px;
-        background-color: #efac9d;
-        border-radius: 10px;
-    }
+        &__image {
+            margin-right: 50px;
+            width: 150px;
+            min-width: 150px;
+            height: 150px;
 
-    &__product-price {
-        color: #666666;
-        font-weight: lighter;
-        min-width: 150px;
-        font-size: 20px;
-        line-height: 25px;
-        height: 25px;
-        margin-left: 20px;
+            img {
+                max-width: 100%;
+            }
+        }
 
-        padding-left: 25px;
-        background-image: url(/public/asset/icons/dollar.png);
-        background-repeat: no-repeat;
-        background-position: 0;
-        background-size: 15px;
-    }
+        &__delete-btn {
+            font-size: 20px;
+            line-height: 40px;
+            padding: 0 15px;
+            text-transform: uppercase;
+            margin-left: 50px;
+            background-color: #efac9d;
+            border-radius: 10px;
+        }
 
-    &__product-info {
-        flex-grow: 1;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: space-between;
-        flex-wrap: nowrap;
+        &__product-price {
+            color: #666666;
+            font-weight: lighter;
+            min-width: 150px;
+            font-size: 20px;
+            line-height: 25px;
+            height: 25px;
+            margin-left: 20px;
+
+            padding-left: 25px;
+            background-image: url(/public/asset/icons/dollar.png);
+            background-repeat: no-repeat;
+            background-position: 0;
+            background-size: 15px;
+        }
+
+        &__product-info {
+            flex-grow: 1;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: space-between;
+            flex-wrap: nowrap;
+        }
     }
 }
 
@@ -119,13 +120,50 @@
     }
 }
 
-.cart__total-price {
-}
-
 .payment {
-    &__options {
+    margin: 50px 0 0 auto;
+    min-width: 300px;
+    width: 400px;
+    height: 300px;
+
+    &__option {
+        line-height: 30px;
+        width: 100%;
+        height: 30px;
+        background-image: url(/public/asset/icons/paypall.png);
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: 60px;
     }
 
     &__buy-options {
+    }
+}
+
+.total {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    &__header {
+        &::after {
+            content: ":";
+            margin-left: 10px;
+            font-size: 20px;
+        }
+    }
+
+    &__price {
+        min-width: 150px;
+        font-size: 30px;
+        line-height: 50px;
+        text-align: start;
+        padding-left: 30px;
+
+        background-image: url(/public/asset/icons/dollar.png);
+        background-repeat: no-repeat;
+        background-position: 0;
+        background-size: 20px;
     }
 }
