[DELETE] delete quantity selection at product page

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -36,6 +36,7 @@
 @import "./3-Modules/details-summary";
 @import "./3-Modules/checkbox";
 @import "./3-Modules/cover--gray-scale";
+@import "./3-Modules/payment";
 
 // 4-PAGES
 @import "./4-Pages/index";
