--- a/public/css/style.css
+++ b/public/css/style.css
@@ -175,7 +175,7 @@ button {
 }
 .modal__textfield {
   font-size: 1em;
-  text-indent: 1em;
+  text-indent: 16px;
   margin: 1em 0 1em 0;
 }
 .modal hr {
@@ -450,6 +450,51 @@ button {
   font-weight: bold;
   transform: translate(-50%, 0);
   color: black;
+}
+
+.btn-delete {
+  font-size: 20px;
+  line-height: 40px;
+  padding: 0 20px;
+  text-transform: uppercase;
+  margin-left: 50px;
+  background-color: #efac9d;
+  border-radius: 10px;
+}
+
+.btn-payment {
+  display: block;
+  margin: 0 0 0 auto;
+  padding: 0 30px;
+  font-size: large;
+  line-height: 40px;
+  text-transform: uppercase;
+  background-color: #5d554e;
+  color: #ebebe9;
+  border-radius: 5px;
+}
+.btn-payment:hover {
+  background-color: #796e65;
+}
+
+.btn-addToCart {
+  display: block;
+  text-align: center;
+  margin: 2em 0 2em 0;
+}
+.btn-addToCart a {
+  text-transform: uppercase;
+  font-weight: bolder;
+  cursor: pointer;
+  color: black;
+  display: block;
+  height: 3em;
+  width: 100%;
+  line-height: 3em;
+  background-color: #eab92d;
+  border-radius: 2px;
+  box-shadow: 0 0 5px 0px rgba(0, 0, 0, 0.8);
+  overflow: hidden;
 }
 
 .logo {
@@ -956,6 +1001,30 @@ hr::after {
   box-shadow: 0 0 5px 0px rgba(0, 0, 0, 0.8);
 }
 
+.payment {
+  margin: 50px 0 0 auto;
+  min-width: 300px;
+  width: 400px;
+  height: 300px;
+}
+.payment__option {
+  margin: 30px 0;
+  line-height: 30px;
+  width: 100%;
+  height: 30px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: 60px;
+}
+
+.paypall {
+  background-image: url(/public/asset/icons/paypal.png);
+}
+
+.mastercard {
+  background-image: url(/public/asset/icons/mastercard.png);
+}
+
 .categories {
   padding-top: 2rem;
   display: flex;
@@ -1071,20 +1140,11 @@ hr::after {
 .checkout .cart__image img {
   max-width: 100%;
 }
-.checkout .cart__delete-btn {
-  font-size: 20px;
-  line-height: 40px;
-  padding: 0 15px;
-  text-transform: uppercase;
-  margin-left: 50px;
-  background-color: #efac9d;
-  border-radius: 10px;
-}
 .checkout .cart__product-price {
   color: #666666;
   font-weight: lighter;
   min-width: 150px;
-  font-size: 20px;
+  font-size: 30px;
   line-height: 25px;
   height: 25px;
   margin-left: 20px;
@@ -1134,21 +1194,6 @@ hr::after {
   text-overflow: ellipsis;
 }
 
-.payment {
-  margin: 50px 0 0 auto;
-  min-width: 300px;
-  width: 400px;
-  height: 300px;
-}
-.payment__option {
-  line-height: 30px;
-  width: 100%;
-  height: 30px;
-  background-image: url(/public/asset/icons/paypall.png);
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: 60px;
-}
 .total {
   display: flex;
   flex-direction: row;
@@ -1228,34 +1273,6 @@ hr::after {
   margin: 0.5em 0 0.5em 0;
 }
 
-.bottom-controls__quantity-select {
-  display: inline-block;
-  font-size: 3em;
-  width: 30%;
-  max-width: 4em;
-  min-width: 2em;
-  margin-right: 0.5em;
-}
-.bottom-controls__addToCart-button {
-  display: block;
-  text-align: center;
-  margin: 2em 0 2em 0;
-}
-.bottom-controls__addToCart-button a {
-  text-transform: uppercase;
-  font-weight: bolder;
-  cursor: pointer;
-  color: black;
-  display: block;
-  height: 3em;
-  width: 100%;
-  line-height: 3em;
-  background-color: #eab92d;
-  border-radius: 2px;
-  box-shadow: 0 0 5px 0px rgba(0, 0, 0, 0.8);
-  overflow: hidden;
-}
-
 .contactus {
   width: 50vw;
   height: 100%;
@@ -1271,6 +1288,8 @@ hr::after {
 .contactus__content textarea {
   height: 20vh;
   min-height: 20vw;
+  padding: 16px;
+  font-size: 1em;
 }
 
 hr {
