--- a/public/scss/2-Layouts/_modal.scss
+++ b/public/scss/2-Layouts/_modal.scss
@@ -17,13 +17,13 @@
     padding: 20px;
 
     background-color: white;
-border: 1px solid black;
+    border: 1px solid black;
     border-radius: 20px;
     position: relative;
 
     &__textfield {
         font-size: 1em;
-        text-indent: 1em;
+        text-indent: 16px;
         margin: 1em 0 1em 0;
     }
 
