--- a/public/scss/3-Modules/_buttons.scss
+++ b/public/scss/3-Modules/_buttons.scss
@@ -72,3 +72,57 @@
     transform: translate(-50%, 0);
     color: black;
 }
+
+//  ==================================
+//  BUTTONS ARE USED FOR SHOPPING CART
+//  ==================================
+.btn-delete {
+    font-size: 20px;
+    line-height: 40px;
+    padding: 0 20px;
+    text-transform: uppercase;
+    margin-left: 50px;
+    background-color: #efac9d;
+    border-radius: 10px;
+}
+
+.btn-payment {
+    display: block;
+    margin: 0 0 0 auto;
+    padding: 0 30px;
+    font-size: large;
+    line-height: 40px;
+    text-transform: uppercase;
+
+    background-color: #5d554e;
+    color: #ebebe9;
+    border-radius: 5px;
+
+    &:hover {
+        background-color: #796e65;
+    }
+}
+
+//  ==================================
+//  BUTTONS ARE USED FOR PRODUCT PAGE
+//  ==================================
+.btn-addToCart {
+    display: block;
+    text-align: center;
+    margin: 2em 0 2em 0;
+
+    a {
+        text-transform: uppercase;
+        font-weight: bolder;
+        cursor: pointer;
+        color: black;
+        display: block;
+        height: 3em;
+        width: 100%;
+        line-height: 3em;
+        background-color: #eab92d;
+        border-radius: 2px;
+        box-shadow: 0 0 5px 0px rgba(0, 0, 0, 0.8);
+        overflow: hidden;
+    }
+}
