--- a/public/scss/4-Pages/Pages/_contactus.scss
+++ b/public/scss/4-Pages/Pages/_contactus.scss
@@ -15,6 +15,8 @@
         textarea {
             height: 20vh;
             min-height: 20vw;
+            padding: 16px;
+            font-size: 1em;
         }
     }
 }
